# MCTS_ClassifierChain

./: .gitignore  LICENSE  MCTS_reg_chains.ipynb  Music Dataset.ipynb  README.md  codecov.yml  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: codecov.yml  tests.yml
data/: 1-FLARE_X.csv  1-FLARE_y.csv  10-ENRON_X.csv  10-ENRON_y.csv  2-EMOT_X.csv  2-EMOT_y.csv  3-SCENE_y.csv  4-FLAGS_X.csv  4-FLAGS_y.csv  5-FOODTRUCK_X.csv  5-FOODTRUCK_y.csv  6-YEAST_X.csv  6-YEAST_y.csv  7-BIRDS_X.csv  7-BIRDS_y.csv  8-GENBASE_X.csv  8-GENBASE_y.csv  9-MEDC_X.csv  9-MEDC_y.csv  README.md  data_preprocessing.ipynb  evaluation.ipynb
data/.results/: losses.json
data/datasets/: 10-ENRON.csv  10-ENRON_X.csv  10-ENRON_y.csv  2-EMOT_X.csv  2-EMOT_y.csv  3-SCENE_y.csv  4-FLAGS_X.csv  4-FLAGS_y.csv  5-FOODTRUCK_X.csv  5-FOODTRUCK_y.csv  7-BIRDS_X.csv  7-BIRDS_y.csv  8-GENBASE_X.csv  8-GENBASE_y.csv  9-MEDC.csv  9-MEDC_X.csv  9-MEDC_y.csv  foodtruck.arff
data/raw_datasets/: 7-BIRDS.csv
examples/: README.md  mcts.ipynb  mcts_vs_mcc.ipynb  mcts_vs_others.ipynb
notebooks/: MCTS_reg_chains.ipynb  datasets.ipynb  mc_loss.ipynb  mcts_loss.ipynb
src/mcts_inference/: __init__.py  brute_force.py  constraints.py  mc.py  mcc.py  mcts.py  mcts_config.py  mcts_node.py  pcc.py  policy.py  utils.py
tests/: conftest.py  test_brute_force.py  test_constraints.py  test_mc.py  test_mcc.py  test_mcts.py  test_mcts_config.py  test_mcts_inference.py  test_mcts_node.py  test_pcc.py  test_policy.py  test_utils.py
