[metadata]
name = mcts_inference
description = MCTS Inference Project
author = Romain Poggi
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages =
    mcts_inference
install_requires =
    numpy>=1.26.4
    scikit-learn>=1.4.1.post1
    tqdm>=4.66.2
    graphviz>=0.20.1
    matplotlib>=3.8.3
    ucimlrepo>=0.0.3
    pandas>=2.2.1


python_requires = >=3.11
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0.1
    pytest-cov>=4.1.0
    mypy>=1.8
    flake8>=7.0.0
    tox>=4.13.0

[options.package_data]
mcts_inference = py.typed

[flake8]
max-line-length = 160
